solved the label alignment problem by adding phantom label

--- a/css/math.css
+++ b/css/math.css
@@ -126,9 +126,15 @@ span.box {
 
 /* use this to number your formula */
 span.label {
-	position: absolute;
-	padding-right: 0.3em;
-	right: 5%;
+	display: table-cell;
+	text-align: right;
+}
+
+/* ... and this to force align */
+span.label-phantom {
+	display: table-cell;
+	text-align: right;
+	opacity: 0;
 }
 
 span.right {
